# it

./: .gitignore  Cargo.toml  LICENSE  README.md  install_deb.sh
deb-repo/: Packages  Release
deb-repo/pool/main/i/it/: it_1.0.0-1_amd64.deb
src/: main.rs
